--- a/index.html
+++ b/index.html
@@ -44,5 +44,5 @@
                 a portar luto de plumas negras y
                 <strong>llorar</strong>
                 por siempre, como el pájaro: Caráu.&nbsp;</p>
-			<img src="bird.jpg" style="width:368px;height:207px;position:absolute;right:30%;bottom:5%;">        
-		</main>	
+			<img src="bird.jpg">        
+		</main>
